# ego-planner-quadcopter

./: README.md
src/: planner.tar.xz
src/planner/plan_manage/launch/: advanced_param.xml  default.rviz  run_in_sim.launch  sim_advanced_param.xml  sim_single_run_in_sim.launch  single_run_in_sim.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp
src/planner/plan_mavros/: CMakeLists.txt  package.xml
src/planner/plan_mavros/include/plan_mavros/: mavros_manager.h
src/planner/plan_mavros/launch/: bsp_send.launch  sim_bsp_send.launch
src/planner/plan_mavros/src/: camera_pos.cpp  drop_mainner.cpp  mavros_manager.cpp  send_goal.cpp  send_target.cpp  test.cpp
